--- a/Ordre de Malte/src/pages/index.html
+++ b/Ordre de Malte/src/pages/index.html
@@ -28,7 +28,9 @@ subject: My Email Templates
         <item href="{{root}}email_abn_1.html" target="_blank">5 - Email ABN 1</item>
         <item href="{{root}}email_abn_2.html" target="_blank">6 - Email ABN 2</item>
         <item href="{{root}}email_abn_3.html" target="_blank">7 - Email ABN 3</item>
-
+        <item href="{{root}}email_don_1.html" target="_blank">8 - Email DON 1</item>
+        <item href="{{root}}email_don_2.html" target="_blank">9 - Email DON 2</item>
+        <item href="{{root}}email_don_3.html" target="_blank">10 - Email DON 3</item>
       </menu>
     </center>
 
