--- a/Ordre de Malte/src/pages/email_don_3.html
+++ b/Ordre de Malte/src/pages/email_don_3.html
@@ -1,6 +1,6 @@
 ---
 layout: index-layout
-subject: Email
+subject: Email Don 3
 url_footer_don_confiance: https://www.ordredemaltefrance.org/?utm_source=email3&utm_campaign=wp-donateurs&utm_medium=e-mail
 url_footer_logo: https://www.ordredemaltefrance.org/?utm_source=email3&utm_campaign=wp-donateurs&utm_medium=e-mail
 ---
@@ -46,36 +46,36 @@ url_footer_logo: https://www.ordredemaltefrance.org/?utm_source=email3&utm_campa
         <columns small="6" large="6"><p style="margin-bottom: 0;" class="fs-small text-bold text-right">Oui, tout à fait</p></columns>
     </row>
 
-    <p class="text-center">
+    <p class="text-center fs-small">
         <a href="https://avis.ordredemaltefrance.org/donateur.html?utm_source=email3&utm_campaign=wp-donateurs&utm_medium=e-mail&note=1">
-            <img src="https://heroku-adfinitas-campaign.s3.amazonaws.com/OMF/Email+04_20/Email_Don_3/1.png" alt="1" class="d-inline-block">
+            <img src="https://heroku-adfinitas-campaign.s3.amazonaws.com/OMF/Email+04_20/Email_Don_3/1.png" alt="1" class="box_avis d-inline-block">
         </a>&nbsp;
         <a href="https://avis.ordredemaltefrance.org/donateur.html?utm_source=email3&utm_campaign=wp-donateurs&utm_medium=e-mail&note=2">
-            <img src="https://heroku-adfinitas-campaign.s3.amazonaws.com/OMF/Email+04_20/Email_Don_3/2.png" alt="2" class="d-inline-block">
+            <img src="https://heroku-adfinitas-campaign.s3.amazonaws.com/OMF/Email+04_20/Email_Don_3/2.png" alt="2" class="box_avis d-inline-block">
         </a>&nbsp;
         <a href="https://avis.ordredemaltefrance.org/donateur.html?utm_source=email3&utm_campaign=wp-donateurs&utm_medium=e-mail&note=3">
-            <img src="https://heroku-adfinitas-campaign.s3.amazonaws.com/OMF/Email+04_20/Email_Don_3/3.png" alt="3" class="d-inline-block">
+            <img src="https://heroku-adfinitas-campaign.s3.amazonaws.com/OMF/Email+04_20/Email_Don_3/3.png" alt="3" class="box_avis d-inline-block">
         </a>&nbsp;
         <a href="https://avis.ordredemaltefrance.org/donateur.html?utm_source=email3&utm_campaign=wp-donateurs&utm_medium=e-mail&note=4">
-            <img src="https://heroku-adfinitas-campaign.s3.amazonaws.com/OMF/Email+04_20/Email_Don_3/4.png" alt="4" class="d-inline-block">
+            <img src="https://heroku-adfinitas-campaign.s3.amazonaws.com/OMF/Email+04_20/Email_Don_3/4.png" alt="4" class="box_avis d-inline-block">
         </a>&nbsp;
         <a href="https://avis.ordredemaltefrance.org/donateur.html?utm_source=email3&utm_campaign=wp-donateurs&utm_medium=e-mail&note=5">
-            <img src="https://heroku-adfinitas-campaign.s3.amazonaws.com/OMF/Email+04_20/Email_Don_3/5.png" alt="5" class="d-inline-block">
+            <img src="https://heroku-adfinitas-campaign.s3.amazonaws.com/OMF/Email+04_20/Email_Don_3/5.png" alt="5" class="box_avis d-inline-block">
         </a>&nbsp;
         <a href="https://avis.ordredemaltefrance.org/donateur.html?utm_source=email3&utm_campaign=wp-donateurs&utm_medium=e-mail&note=6">
-            <img src="https://heroku-adfinitas-campaign.s3.amazonaws.com/OMF/Email+04_20/Email_Don_3/6.png" alt="6" class="d-inline-block">
+            <img src="https://heroku-adfinitas-campaign.s3.amazonaws.com/OMF/Email+04_20/Email_Don_3/6.png" alt="6" class="box_avis d-inline-block">
         </a>&nbsp;
         <a href="https://avis.ordredemaltefrance.org/donateur.html?utm_source=email3&utm_campaign=wp-donateurs&utm_medium=e-mail&note=7">
-            <img src="https://heroku-adfinitas-campaign.s3.amazonaws.com/OMF/Email+04_20/Email_Don_3/7.png" alt="7" class="d-inline-block">
+            <img src="https://heroku-adfinitas-campaign.s3.amazonaws.com/OMF/Email+04_20/Email_Don_3/7.png" alt="7" class="box_avis d-inline-block">
         </a>&nbsp;
         <a href="https://avis.ordredemaltefrance.org/donateur.html?utm_source=email3&utm_campaign=wp-donateurs&utm_medium=e-mail&note=8">
-            <img src="https://heroku-adfinitas-campaign.s3.amazonaws.com/OMF/Email+04_20/Email_Don_3/8.png" alt="8" class="d-inline-block">
+            <img src="https://heroku-adfinitas-campaign.s3.amazonaws.com/OMF/Email+04_20/Email_Don_3/8.png" alt="8" class="box_avis d-inline-block">
         </a>&nbsp;
         <a href="https://avis.ordredemaltefrance.org/donateur.html?utm_source=email3&utm_campaign=wp-donateurs&utm_medium=e-mail&note=9">
-            <img src="https://heroku-adfinitas-campaign.s3.amazonaws.com/OMF/Email+04_20/Email_Don_3/9.png" alt="9" class="d-inline-block">
+            <img src="https://heroku-adfinitas-campaign.s3.amazonaws.com/OMF/Email+04_20/Email_Don_3/9.png" alt="9" class="box_avis d-inline-block">
         </a>&nbsp;
         <a href="https://avis.ordredemaltefrance.org/donateur.html?utm_source=email3&utm_campaign=wp-donateurs&utm_medium=e-mail&note=10">
-            <img src="https://heroku-adfinitas-campaign.s3.amazonaws.com/OMF/Email+04_20/Email_Don_3/10.png" alt="10" class="d-inline-block">
+            <img src="https://heroku-adfinitas-campaign.s3.amazonaws.com/OMF/Email+04_20/Email_Don_3/10.png" alt="10" class="box_avis d-inline-block">
         </a>
     </p>
 
