--- a/Ordre de Malte/src/pages/email_don_2.html
+++ b/Ordre de Malte/src/pages/email_don_2.html
@@ -1,6 +1,6 @@
 ---
 layout: index-layout
-subject: Email
+subject: Email Don 2
 url_footer_don_confiance: https://www.ordredemaltefrance.org/?utm_source=email2&utm_campaign=wp-donateurs&utm_medium=e-mail
 url_footer_logo: https://www.ordredemaltefrance.org/?utm_source=email2&utm_campaign=wp-donateurs&utm_medium=e-mail
 ---
@@ -44,7 +44,7 @@ url_footer_logo: https://www.ordredemaltefrance.org/?utm_source=email2&utm_campa
         Chère amie, cher ami,<br><br>
         Fort de près de 1&nbsp;000 ans d’histoire, de valeurs et d’actions héritées du plus ancien organisme caritatif au monde, chaque année l’Ordre de Malte France est là pour accueillir, secourir et soigner plus de 350&nbsp;000 personnes parmi les plus fragiles.<br><br>
         Parmi ces personnes, il y a <span class="text-bold">près de 152&nbsp;000 personnes qui vivent dans la rue en France</span>. Un chiffre qui a doublé en 10 ans.<br><br>
-        <span class="fs-big text-red text-bold">Mobilisées pour lutter contre<br>l’exclusion, les équipes de<br>l’Ordre de Malte France sont là.</span><br><br>
+        <span class="fs-big text-red text-bold">Mobilisées pour lutter contre<br class="show-for-large"> l’exclusion, les équipes de<br class="show-for-large"> l’Ordre de Malte France sont là.</span><br><br>
         Notamment à bord du Fleuron Saint Jean et du Fleuron Saint Michel, nos structures qui hébergent et accompagnent vers la réinsertion des centaines de personnes fragilisées chaque année.<br><br>
         Deux dispositifs qui prouvent que la rue n’est pas une fatalité.<br>
         <span class="text-bold">Les résultats sont là&nbsp;: 70% de taux de retour à l’emploi chez les personnes que nous avons accueillies au Fleuron Saint Michel et qui hier vivaient dans la rue&nbsp;!</span><br><br>
@@ -53,7 +53,7 @@ url_footer_logo: https://www.ordredemaltefrance.org/?utm_source=email2&utm_campa
    
     <spacer size="44"></spacer>
 
-    <p class="fs-35 roboto text-blue uppercase text-bold">Pour prendre soin<br>des plus fragiles,<br><span class="text-red">nous serons toujours là…</span></p>
+    <p class="fs-35 roboto text-blue uppercase text-bold">Pour prendre soin<br class="show-for-large"> des plus fragiles,<br class="show-for-large"> <span class="text-red">nous serons toujours là…</span></p>
     <center>
         <a href="https://www.ordredemaltefrance.org/organisation/nos-implantations-en-france.html?utm_source=email2&utm_campaign=wp-donateurs&utm_medium=e-mail">
             <img class="width-100" src="https://heroku-adfinitas-campaign.s3.amazonaws.com/OMF/Email+04_20/Email_Don_2/action_france.png" alt="Je découvre les actions en France"/>
