--- a/Ordre de Malte/src/pages/index.html
+++ b/Ordre de Malte/src/pages/index.html
@@ -31,6 +31,7 @@ subject: My Email Templates
         <item href="{{root}}email_don_1.html" target="_blank">8 - Email DON 1</item>
         <item href="{{root}}email_don_2.html" target="_blank">9 - Email DON 2</item>
         <item href="{{root}}email_don_3.html" target="_blank">10 - Email DON 3</item>
+        <item href="{{root}}email_don_4.html" target="_blank">11 - Email DON 4</item>
       </menu>
     </center>
 
