--- a/Ordre de Malte/src/pages/email_don_1.html
+++ b/Ordre de Malte/src/pages/email_don_1.html
@@ -22,13 +22,11 @@ url_footer_logo: https://www.ordredemaltefrance.org/?utm_source=email1&utm_campa
         </center>
     </a>
 
-    <spacer size="20"></spacer>
+    <spacer size="50"></spacer>
 
-    <center>
-        <a class="d-inline-block" href="https://www.ordredemaltefrance.org/?utm_source=email1&utm_campaign=wp-donateurs&utm_medium=e-mail">
-            <img src="https://adfinitas-statics-cdn.s3.eu-west-3.amazonaws.com/OMF/Email_abn_1/merci.png">
-        </a>                
-    </center>   
+    <a class="d-inline-block" href="https://www.ordredemaltefrance.org/?utm_source=email1&utm_campaign=wp-donateurs&utm_medium=e-mail">
+        <img src="https://heroku-adfinitas-campaign.s3.amazonaws.com/OMF/Email+04_20/Email_Don_1/merci.png">
+    </a>
     <spacer size="20"></spacer>
     <row>
         <columns valign="middle" small="12" large="5" >
