email plus de force 1 2 3

--- a/Ordre de Malte/src/pages/index.html
+++ b/Ordre de Malte/src/pages/index.html
@@ -28,6 +28,9 @@ subject: My Email Templates
         <item href="{{root}}email_abn_1.html" target="_blank">5 - Email ABN 1</item>
         <item href="{{root}}email_abn_2.html" target="_blank">6 - Email ABN 2</item>
         <item href="{{root}}email_abn_3.html" target="_blank">7 - Email ABN 3</item>
+        <item href="{{root}}email_force_1.html" target="_blank">8 - Email Force 1</item>
+        <item href="{{root}}email_force_2.html" target="_blank">9 - Email Force 2</item>
+        <item href="{{root}}email_force_3.html" target="_blank">10 - Email Force 3</item>
 
       </menu>
     </center>
